# Enclave

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  svelte.config.js
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build.yml
apps/desktop/: package.json  svelte.config.js  vite.config.ts
apps/desktop/src/: app.css
apps/desktop/src/lib/: SettingsPanel.svelte  VaultGuard.svelte  types.ts
apps/desktop/src/routes/: +layout.svelte  +page.svelte
apps/desktop/src/routes/[id]/: +page.svelte
apps/desktop/src/routes/graph/: +page.svelte
apps/mobile/: package.json  svelte.config.js  vite.config.ts
apps/web/: package.json
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/crates/core-db/: Cargo.toml
src-tauri/crates/core-db/src/: lib.rs
src-tauri/crates/core-network/: Cargo.toml
src-tauri/crates/core-network/src/: lib.rs  mdns.rs  ws.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: VaultGuard.svelte  storage.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/[id]/: +page.svelte
