[workspace]
members = ["crates/core-db", "crates/core-network"]
resolver = "2"

[package]
name = "enclave"
version = "0.1.0"
description = "Secure, local-first, zero-internet note-taking application"
authors = []
edition = "2021"
rust-version = "1.77"
license = "MIT"
repository = ""

[lib]
name = "enclave_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# ── Internal Crates ──
core-db = { path = "crates/core-db" }
core-network = { path = "crates/core-network" }

# ── Tauri v2 Core ──
tauri = { version = "2", features = [] }

# ── Encrypted Local Database ──
rusqlite = { version = "0.34", features = ["bundled-sqlcipher"] }

# ── Serialization ──
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Utilities ──
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["rt", "sync"] }
