[package]
name = "core-db"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
rusqlite = { version = "0.34", features = ["bundled-sqlcipher"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
