[package]
name = "core-network"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
mdns-sd = "0.20"
tokio = { version = "1", features = ["sync", "net", "io-util", "rt", "macros"] }
tokio-tungstenite = "0.29"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
